# Transaction-Screenshot-Parser

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  process.md  pyproject.toml
.github/workflows/: ci.yml
images/: README.md
src/snap_transact/: __init__.py  core.py  main.py  models.py  ocr.py  parser.py  utils.py
tests/: __init__.py  test_core.py  test_integration.py  test_ocr.py  test_parser.py  test_utils.py
