[tool.poetry]
name = "snap-transact"
version = "0.1.0"
description = "CLI application to extract transaction data from screenshots using OCR"
authors = ["Team <team@example.com>"]
readme = "README.md"
packages = [{include = "snap_transact", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
pillow = "^10.4.0"
pytesseract = "^0.3.0"
pandas = "^2.2.0"
pydantic = "^2.8.0"
loguru = "^0.7.0"
pydantic-settings = "^2.0.0"
sentry-sdk = "^1.0.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
pip-audit = "^2.7.0"

[tool.poetry.scripts]
snap-transact = "snap_transact.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/snap_transact",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=lcov",
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85 